Deployments/YAMLs/DEV/Netpol/aro-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: aro-netpol
  namespace: aro-workshop-dev 
spec:
  podSelector:
    matchLabels:
      deployment: mslearn-aks-workshop-ratings-api
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 3000
    from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: aro-workshop-dev
        podSelector:
          matchLabels:
            deployment: mslearn-aks-workshop-ratings-web
